# aquacomputer-quadro-control

./: PKGBUILD  README.md  config.json  constants.py  converter.py  crcTest.py  default.json  example.py  inputForms.py  pyproject.toml  quadro-control.py  quadro.py  requirements.txt  structure.py  test.py
data/: README.md  d0  d1  d2  d3  d5  d6  d7  d8  data-fan1-10.txt  data-fan1-100.txt  data-fan1-99.txt  data.md  data0.txt  data1.txt  data10  data11  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9  default.txt  polynom-calculation  quadro.hexpat  table_to_bin.py
src/quadrocontrol/: converter.py  example.py  inputForms.py  quadro.py  quadrocontrol.py  structure.py
